--- a/css/variables.css
+++ b/css/variables.css
@@ -5,7 +5,7 @@
 
     --color-black: rgba(0, 0, 0, 0.8);
     --color-blue: #0033ff;
-    --color-point: #620039;
+    --color-point: #d11b85;
     --color-green: #396200;
     --color-yellow: #d7be00;
     --color-gray: rgba(255,255,255,0.8);
