--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
 @import "components/whats-section-new.css";
 @import "components/whats-scroll-arrow.css";
 @import "components/grid-container-new.css";
+@import "components/benefit-section.css";
 
 
 /* Screens */
