--- a/css/screens/index.css
+++ b/css/screens/index.css
@@ -1,6 +1,6 @@
 .main-screen {
     width: 100vw;
-    height: 100vh;
+    min-height: 200vh; /* sticky 효과가 작동하도록 충분한 높이 제공 */
     display: none;
     opacity: 0;
     transition: opacity 0.5s ease;
@@ -10,4 +10,9 @@
     width: 100%;
     height: 100%;
     margin: 0 auto;
+}
+
+/* 스크롤 스페이서 - 마지막 섹션이 완전히 표시될 수 있도록 */
+.whats-scroll-spacer {
+    height: 100vh;
 }
