--- a/css/style-page.css
+++ b/css/style-page.css
@@ -15,6 +15,7 @@
 
 html {
   /* scroll-behavior: smooth; */ /* 딱딱한 스냅을 위해 제거 */
+  overflow-x: hidden; /* 가로 스크롤바 숨김 */
 }
 
 body {
@@ -26,15 +27,22 @@ body {
     color: white;
     background-color: black;
     padding-top: 60px; /* 고정 헤더 높이만큼 패딩 추가 */
+    overflow-x: hidden; /* 가로 스크롤바 숨김 */
+    width: 100%; /* 명시적 너비 설정 */
+    max-width: 100vw; /* 최대 너비 제한 */
 }
 
 .main-screen {
-  width: 100vw;
+  width: 100%;
+  max-width: 100vw;
   height: 100vh;
+  overflow-x: hidden;
 }
 
 .main-screen__container {
   width: 100%;
+  max-width: 100%;
   height: 100%;
   margin: 0 auto;
+  overflow-x: hidden;
 }
